--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.13.1
 blinker==1.7.0
 click==8.1.7
+exceptiongroup==1.2.2
 Flask==3.0.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+importlib_metadata==8.5.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -16,5 +18,7 @@ psycopg2-binary==2.9.9
 pytest==8.0.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.25
+tomli==2.0.2
 typing_extensions==4.9.0
 Werkzeug==3.0.1
+zipp==3.20.2
